--- a/files_all/solidlab-perftest-agent.service
+++ b/files_all/solidlab-perftest-agent.service
@@ -8,17 +8,11 @@ After=network.target
 
 [Service]
 WorkingDirectory=/tmp
-Environment="PERFTEST_API_ENDPOINT=https://testing.solidlab.be/api/v1/"
-Environment="MACHINE_ID=todo"
-Environment="TESTENV_ID=269"
-Environment="AUTH_TOKEN=T3kH3635EuOpqTqZQieZA8qYYounvc01CYhi_Z4W7xm8ueZsDrEf6A"
-Environment="CSS_CONFIG_FILE=/etc/css/perftest.json"
-Environment="PERFSTAT_ENV_FILE=/etc/perfstat.env"
-Environment="HOSTNAME=none"
-Environment="PORT=none"
-# <api_endpoint> <machine_id> <test_env_id> <auth_token> <css_config_file> <css_host> <css_port>
-ExecStart=/usr/local/venv/perftest-agent/bin/solidlab-perftest-agent "${PERFTEST_API_ENDPOINT}" "${MACHINE_ID}" "${TESTENV_ID}" "${AUTH_TOKEN}" "${CSS_CONFIG_FILE}" "${PERFSTAT_ENV_FILE}" "${HOST}" "${PORT}"
-Restart=no
+EnvironmentFile=/etc/solidlab-perftest-agent.env
+# solidlab-perftest-agent uses env vars to configure itself
+ExecStart=/usr/local/venv/perftest-agent/bin/solidlab-perftest-agent
+Restart=always
+RestartSec=5
 #Type=exec
 
 # see man systemd.kill for details about the below
