--- a/ansible-variables.yaml
+++ b/ansible-variables.yaml
@@ -32,5 +32,6 @@ css_default_lock_expiration: false   # true or false (true not yet supported!)
 #nodejs_version: 16
 nodejs_version: 18
 
-# Install deps needed by jbr on client (docker) (does not isntall jbr)
-jbr_client: false
+# Install deps needed by jbr on client (docker) (does not install jbr)
+jbr_client: true
+
