--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,6 +2,7 @@
 - hosts: all
   become: yes
   vars_files:
+    - default-ansible-variables.yaml
     - ansible-variables.yaml
   roles:
     - role: vwall2_node
@@ -36,6 +37,7 @@
 - hosts: ss_servers
   become: yes
   vars_files:
+    - default-ansible-variables.yaml
     - ansible-variables.yaml
   roles:
     - role: docker
@@ -131,6 +133,7 @@
 - hosts: clients
   become: yes
   vars_files:
+    - default-ansible-variables.yaml
     - ansible-variables.yaml
   roles:
     - role: install_client_scripts
