--- a/roles/nodejs/tasks/main.yaml
+++ b/roles/nodejs/tasks/main.yaml
@@ -10,7 +10,7 @@
 
 - name: "Add nodejs {{ nodejs_version }}.x ppa for apt repo"
   ansible.builtin.apt_repository:
-    repo: deb https://deb.nodesource.com/node_{{ nodejs_version }}.x {{ ansible_distribution_release }} main
+    repo: deb https://deb.nodesource.com/node_{{ nodejs_version }}.x nodistro main
     update_cache: yes
 
 - name: Prefer deb.nodesource.com over official
